modified:   src/views/GeneratorView.vue
