# Backend/docs/swagger.json
@@ -54,11 +54,10 @@
         },
         "/api/resume/update": {
             "post": {
-                "description": "编辑简历",
                 "tags": [
                     "resume"
                 ],
-                "summary": "编辑简历",
+                "summary": "编辑简历辑简历",
                 "parameters": [
                     {
                         "description": "简历信息",
@@ -99,7 +98,7 @@
                 }
             },
             "delete": {
-                "description": "除简历",
+                "description": "简历",
                 "tags": [
                     "resume"
                 ],
@@ -131,10 +130,7 @@
                     "$ref": "#/definitions/models.ResumeBasicInfo"
                 },
                 "careerObjective": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.ResumeCareerObjective"
-                    }
+                    "$ref": "#/definitions/models.ResumeCareerObjective"
                 },
                 "educationInfo": {
                     "type": "array",
